# lief-osquery

./: .gitignore  LICENSE  README.md
darwin/src/: machofunctions.cpp  macholibraries.cpp  machosections.cpp  machosymbols.cpp
extension_lief_darwin/: CMakeLists.txt
extension_lief_darwin/src/: macholibraries.cpp  main.cpp
extension_lief_windows/: CMakeLists.txt
extension_lief_windows/src/: main.cpp  pefunctions.cpp  pelibraries.cpp  pesections.cpp  pesig.cpp
windows/: CMakeLists.txt
windows/src/: pefunctions.cpp  pesections.cpp
